--- a/Javascript/theDocumentObjectModel/index.html
+++ b/Javascript/theDocumentObjectModel/index.html
@@ -38,5 +38,36 @@
         <!--Layout-->
         <p id="layout" style="border: 3px solid red"> I'm boxed in </p>
 
+        <p><span id="one"></span></p> 
+        <p><span id="two"></span></p>
+
+        <!--Styling-->
+        <p><a href=".">Normal link</a></p> 
+        <p><a href="." style="color: green">Green link</a></p>
+
+        This text is displayed <strong>inline</strong>, 
+        <strong style="display: block">as a block</strong>, 
+        and <strong style="display: none">not at all</strong>.
+
+        <p id="para" style="color: purple"> Nice text </p>
+
+        <!--Cascading styles-->
+
+        <!--Query selectors-->
+        <p>And if you go chasing 
+            <span class="animal">rabbits</span>
+        </p> 
+        <p>And you know you're going to fall</p> 
+        <p>Tell 'em a 
+            <span class="character">hookah smoking 
+                <span class="animal">caterpillar</span>
+            </span>
+        </p> 
+        <p>Has given you the call</p>
+
+        <!--Positioning and animating -->
+        <p style="text-align: center"> 
+            <img src="./black cat.png" style="position: relative; width: 200px; height: 200px;"> 
+        </p> 
     </body> 
 </html>
