learn handing event

--- a/Javascript/handingEvent/eventsAndDOMNodes/index.html
+++ b/Javascript/handingEvent/eventsAndDOMNodes/index.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>element by tag name</title>
+    <title>Document</title>
     <script defer src="./main.js"></script>
 </head>
 <body>
-    <h1>Heading with a 
-        <span>span</span> element.
-    </h1>
+    <button>Click me</button> 
+    <p>No handler here.</p> 
 
-    <p>A paragraph with 
-        <span>one</span>, <span>two</span> spans.
-    </p>
+    <button>Act-once button</button> 
+
 </body>
 </html>
