do handling event  exercise

--- a/Javascript/handingEvent/Excercises/Ballon/index.html
+++ b/Javascript/handingEvent/Excercises/Ballon/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Baloon</title>
     <script src="./main.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="">
+    <p id="balloon" style="position: absolute; top: 200px;">🎈</p>
 </body>
 </html>
