--- a/Javascript/Canvas/paths.html
+++ b/Javascript/Canvas/paths.html
@@ -1,11 +1,18 @@
 <canvas></canvas> 
 <script> 
+    // let cx = document.querySelector("canvas").getContext("2d"); 
+    // cx.beginPath(); 
+    // for (let y = 10; y < 100; y += 10) { 
+    //     cx.moveTo(10, y); 
+    //     cx.lineTo(90, y);
+    // } 
+    // cx.stroke(); 
+
     let cx = document.querySelector("canvas").getContext("2d"); 
     cx.beginPath(); 
-    for (let y = 10; y < 100; y += 10) { 
-        cx.moveTo(10, y); 
-        cx.lineTo(90, y);
-    } 
-    cx.stroke(); 
+    cx.moveTo(50, 10); 
+    cx.lineTo(10, 70); 
+    cx.lineTo(90, 70); 
+    cx.fill(); 
 </script>
 
