--- a/Javascript/Canvas/Curves.html
+++ b/Javascript/Canvas/Curves.html
@@ -1,6 +1,6 @@
-<canvas></canvas> 
+<canvas id="canvas1"></canvas> 
 <script> 
-    let cx = document.querySelector("canvas").getContext("2d"); 
+    let cx = document.querySelector("#canvas1").getContext("2d"); 
 
     cx.beginPath(); 
     cx.moveTo(10, 90); // control=(60,10) goal=(90,90) 
@@ -9,3 +9,30 @@
     cx.closePath(); 
     cx.stroke(); 
 </script>
+
+<canvas id="canvas2"></canvas> 
+<script> 
+    let cx = document.querySelector("#canvas2").getContext("2d"); 
+    cx.beginPath();
+    cx.moveTo(10, 90); 
+    // control1=(10,10) control2=(90,10) goal=(50,90) 
+    cx.bezierCurveTo(10, 10, 90, 10, 50, 90); 
+    cx.lineTo(90, 10); 
+    cx.lineTo(10, 10); 
+    cx.closePath(); 
+    cx.stroke(); 
+</script>
+
+<canvas id="canvas3"></canvas> 
+<script>
+    let cx = document.querySelector("#canvas3").getContext("2d");
+    cx.beginPath(); 
+    // center=(50,50) radius=40 angle=0 to 7 
+    cx.arc(50, 50, 40, 0, 7); 
+    // center=(150,50) radius=40 angle=0 to π½ 
+    cx.arc(150, 50, 40, 0, 0.5 * Math.PI); 
+    cx.stroke(); 
+</script>
+
+
+
