--- a/Javascript/HTTPandForms/fileFields.html
+++ b/Javascript/HTTPandForms/fileFields.html
@@ -23,5 +23,14 @@
             reader.readAsText(file);
         }
     }); 
+
+    function readFileText(file) { 
+        return new Promise((resolve, reject) => { 
+            let reader = new FileReader(); 
+            reader.addEventListener( "load", () => resolve(reader.result)); 
+            reader.addEventListener( "error", () => reject(reader.error)); 
+            reader.readAsText(file); 
+        });
+    }
 </script>
 
