learn fetch muitple API to my own domain

--- a/Javascript/Node_js/learn_with_TCT/Module_3/The_weather_here/public/checkins/index.html
+++ b/Javascript/Node_js/learn_with_TCT/Module_3/The_weather_here/public/checkins/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>Data Selfie App</h1>
-    <div><a href="/">enter</a> | <a href="/logs">list</a></div>
+    <div><a href="../index.html">enter</a> | <a href="/">list</a></div>
     <script src="logs.js"></script>
   </body>
 </html>
