--- a/Javascript/Node_js/learn_with_TCT/Module_3/The_weather_here/public/index.html
+++ b/Javascript/Node_js/learn_with_TCT/Module_3/The_weather_here/public/index.html
@@ -17,8 +17,7 @@
       longitude: <span id="longitude"></span>°
     </p>
     <p>
-      the weather here is <span id="description"></span> with a temperature of 
-      <span id="temperature"></span> degrees celsius. <br>
+      the weather at <span id="lat"></span>°, <span id="lon"></span>° is <span id="description"></span> with a temperature of <span id="temperature"></span> degrees celsius. <br>
       The air quality index (aqi) in your city (<span id="aq_city"></span>) is <span id="aq_aqi"></span> with paticulate matter (<span id="aq_pm"></span>). Your air status is <span id="aq_status"></span> last read on <span id="aq_date"></span>.
     </p>
     <button id="checkin">check in</button>
