--- a/Javascript/Node_js/learn_with_TCT/Module_3/The_weather_here/public/index.html
+++ b/Javascript/Node_js/learn_with_TCT/Module_3/The_weather_here/public/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
+    <link rel="shortcut icon" href="#">
     <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Document</title>
   </head>
